# quadtree_kdtree_project

./: .gitignore  README.md  geo_structures.py  get_median.py  kd_tree.py  kd_tree_vis.py  pyproject.toml  quadtree.py  quadtree_vis.py  test.ipynb  times.py
visualizer/: main.py
